--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Crownvalz Bootstrap Template - Index</title>
+  <title>Crownvalz - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,73 +38,72 @@
 
 <body>
 
-  <!-- ======= bravo Section ======= -->
-  <section id="bravo" class="d-flex flex-column justify-content-end align-items-center">
-    <div id="bravoCarousel" data-bs-interval="5000" class="container carousel carousel-fade" data-bs-ride="carousel">
+<!-- ======= Hero Section ======= -->
+<section id="hero">
+  <div class="hero-container">
+    <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
-    <!-- Slide 1 -->
-    <div class="carousel-item active">
-      <div class="carousel-container">
-        <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Crownvalz</span></h2>
-        <p class="animate__animated animate__fadeInUp">We offer a range of services to meet your digital needs, including website designing, research consultation, and tech advisory. Let's work together to achieve your goals.</p>
-        <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
-      </div>
-    </div>
+      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
 
-    <!-- Slide 2 (You can add more slides if needed) -->
-    <div class="carousel-item">
-      <div class="carousel-container">
-        <h2 class="animate__animated animate__fadeInDown">Website Designing</h2>
-        <p class="animate__animated animate__fadeInUp">Our website designing services are tailored to your specific needs. We create beautiful and functional websites that leave a lasting impression.</p>
-        <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
-      </div>
-    </div>
+      <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item">
+        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpeg);">
           <div class="carousel-container">
-            <h2 class="animate__animated animate__fadeInDown">Research Consultation</h2>
-            <p class="animate__animated animate__fadeInUp">Our research consultation services provide valuable insights and data-driven solutions for your business or projects. Let's work together for success.</p>
-            <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
+            <div class="carousel-content">
+              <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Crownvalz</span></h2>
+              <p class="animate__animated animate__fadeInUp">We specialize in website designing, research consultation, and tech advisory services. Let us help you achieve your digital goals with expertise and innovation. Reach out to us today!</p>
+              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Get Started</a>
+            </div>
           </div>
         </div>
-    
+
         <!-- Slide 2 (You can add more slides if needed) -->
-        <div class="carousel-item">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpeg);">
           <div class="carousel-container">
-            <h2 class="animate__animated animate__fadeInDown">Tech Advisory</h2>
-            <p class="animate__animated animate__fadeInUp">Our tech advisory services help you navigate the complex world of technology, making informed decisions for your business's growth and success.</p>
-            <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
-           </div>
+            <div class="carousel-content">
+              <h2 class="animate__animated animate__fadeInDown">Website Designing</h2>
+              <p class="animate__animated animate__fadeInUp">Our website designing services are tailored to your specific needs. We create beautiful and functional websites that leave a lasting impression.</p>
+              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
+            </div>
+          </div>
         </div>
 
-      <a class="carousel-control-prev" href="#bravoCarousel" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
+        <!-- Slide 3 (You can add more slides if needed) -->
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpeg);">
+          <div class="carousel-container">
+            <div class="carousel-content">
+              <h2 class="animate__animated animate__fadeInDown">Research Consultation</h2>
+              <p class="animate__animated animate__fadeInUp">Our research consultation services provide valuable insights and data-driven solutions for your business or projects. Let's work together for success.</p>
+              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 4 (You can add more slides if needed) -->
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-4.jpeg);">
+          <div class="carousel-container">
+            <div class="carousel-content">
+              <h2 class="animate__animated animate__fadeInDown">Tech Advisory</h2>
+              <p class="animate__animated animate__fadeInUp">Our tech advisory services help you navigate the complex world of technology, making informed decisions for your business's growth and success.</p>
+              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon bi bi-chevron-double-left" aria-hidden="true"></span>
       </a>
 
-      <a class="carousel-control-next" href="#bravoCarousel" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
+      <a class="carousel-control-next" href="#heroCarousel" role a="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon bi bi-chevron-double-right" aria-hidden="true"></span>
       </a>
 
     </div>
-
-    <svg class="bravo-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28 " preserveAspectRatio="none">
-      <defs>
-        <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z">
-      </defs>
-      <g class="wave1">
-        <use xlink:href="#wave-path" x="50" y="3" fill="rgba(255,255,255, .1)">
-      </g>
-      <g class="wave2">
-        <use xlink:href="#wave-path" x="50" y="0" fill="rgba(255,255,255, .2)">
-      </g>
-      <g class="wave3">
-        <use xlink:href="#wave-path" x="50" y="9" fill="#fff">
-      </g>
-    </svg>
-
-  </section><!-- End bravo -->
-
+  </div>
+</section><!-- End Hero -->
 
 
   <!-- ======= Header ======= -->
@@ -122,26 +121,21 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Loan</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+              <li><a href="loanmath.html">Our loan types</a></li>
+              <li class="dropdown"><a href="#"><span>Major facilities</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="loanmath.html">Facility topup</a></li>
+                  <li><a href="loanmath.html">New facility</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="loanmath.html">Facility balance</a></li>
+              <li><a href="loanmath.html">Claim clearence</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Products</a></li>
+          <li><a class="nav-link scrollto" href="#team">Team</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -150,6 +144,71 @@
   </header><!-- End Header -->
 
   <main id="main">
+
+<!-- ======= Our Services Section ======= -->
+<section id="services" class="services">
+  <div class="container">
+
+    <div class="section-title">
+      <h2>Download free Templetes</h2>
+      <p>Explore our range of services tailored to meet your digital needs. We are dedicated to delivering excellence in website designing, research consultation, and tech advisory.</p>
+    </div>
+
+    <div class="row">
+      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+        <div class="icon-box">
+          <div class="icon"><i class="bx bxl-dribbble"></i></div>
+          <h4 class="title"><a href="#">Website Designing</a></h4>
+          <p class="description">We create stunning and functional websites that leave a lasting impression on your audience.</p>
+          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+            <img src="assets/img/wordlogo.svg" alt="Excel Logo" width="24" height="24">
+            Download
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+        <div class="icon-box">
+          <div class="icon"><i class="bx bx-table"></i></div>
+          <h4 class="title"><a href="#">Tech Advisory</a></h4>
+          <p class="description">Navigate the complex world of technology with our advisory services for business growth and success.</p>
+          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+            <img src="assets/img/wordlogo.svg" alt="Excel Logo" width="24" height="24">
+            Download
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+        <div class="icon-box">
+          <div class="icon"><i class="bx bx-pin"></i></div>
+          <h4 class="title"><a href="#">Tech Advisory</a></h4>
+          <p class="description">Navigate the complex world of technology with our advisory services for business growth and success.</p>
+          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+            <img src="assets/img/excellogo.png" alt="Excel Logo" width="24" height="24">
+            Download
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+        <div class="icon-box">
+          <div class="icon"><i class="bx bx-tachometer"></i></div>
+          <h4 class="title"><a href="#">Tech Advisory</a></h4>
+          <p class="description">Navigate the complex world of technology with our advisory services for business growth and success.</p>
+          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+            <img src="assets/img/excellogo.png" alt="Excel Logo" width="24" height="24">
+            Download
+          </a>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End Our Services Section -->
+
+
 
 <!-- ======= About Us Section ======= -->
 <section id="about" class="about">
@@ -604,7 +663,7 @@
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input class="" type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
           </div>
