--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -126,12 +126,12 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Product information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Accesories</li>
+                <li><strong>Client</strong>: Godfrey Abraham</li>
+                <li><strong>Product date</strong>: 01 March, 2025</li>
+                <li><strong>Product URL</strong>: <a href="https://crownvalz.github.io/Abraham/">www.crownvalztech.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
@@ -149,6 +149,7 @@
 
   </main><!-- End #main -->
 
+
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="footer-top">
@@ -158,10 +159,10 @@
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>Crownvalz</h3>
             <p>
-              A108 Adam Street <br>
-              NY 535022, USA<br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              7856 Mriti Street <br>
+              Kigamboni 6547, DSM<br><br>
+              <strong>Phone:</strong> +255 712 2207 82<br>
+              <strong>Email:</strong> crownvalz@gmail.com<br>
             </p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -198,7 +199,7 @@
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input class="" type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
           </div>
