--- a/loanmath.html
+++ b/loanmath.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - Crownvalz</title>
+  <title>Crownvalz - Loan</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
