--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Crownvalz</span></h2>
           <p class="animate__animated animate__fadeInUp">We offer a range of services to meet your digital needs, including website designing, research consultation, and tech advisory. Let's work together to achieve your goals.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+          <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Apply Loan</a>
         </div>
       </div>
   
@@ -90,7 +90,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Website Designing</h2>
           <p class="animate__animated animate__fadeInUp">Our website designing services are tailored to your specific needs. We create beautiful and functional websites that leave a lasting impression.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
+          <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Apply Loan</a>
         </div>
       </div>
   
@@ -99,7 +99,7 @@
             <div class="carousel-container">
               <h2 class="animate__animated animate__fadeInDown">Research Consultation</h2>
               <p class="animate__animated animate__fadeInUp">Our research consultation services provide valuable insights and data-driven solutions for your business or projects. Let's work together for success.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
+              <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Apply Loan</a>
             </div>
           </div>
       
@@ -108,8 +108,8 @@
             <div class="carousel-container">
               <h2 class="animate__animated animate__fadeInDown">Tech Advisory</h2>
               <p class="animate__animated animate__fadeInUp">Our tech advisory services help you navigate the complex world of technology, making informed decisions for your business's growth and success.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Learn More</a>
-             </div>
+              <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Apply Loan</a>
+            </div>
           </div>
   
         <a class="carousel-control-prev" href="#bravoCarousel" role="button" data-bs-slide="prev">
