--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Crownvalz</span></h2>
           <p class="animate__animated animate__fadeInUp">We offer a range of services to meet your digital needs, including website designing, research consultation, and tech advisory. Let's work together to achieve your goals.</p>
-          <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Apply Loan</a>
+          <a href="cvgen.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Generate Free CV</a>
         </div>
       </div>
   
