--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
+
       <div class="logo">
         <h1 class="text-light"><a href="index.html"><span>Crownvalz</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
+
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#bravo">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto active" href="index.html#bravo">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About Us</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
           <li class="dropdown"><a href="#"><span>Loan</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="loanmath.html">Our loan types</a></li>
@@ -56,11 +58,12 @@
               <li><a href="loanmath.html">Claim clearence</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#portfolio">Products</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="index.html#portfolio">Products</a></li>
+          <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
+
     </div>
   </header><!-- End Header -->
 
@@ -579,7 +582,7 @@
               <img src="assets/img/team/team-4.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Violeth Paul</h4>
+                  <h4>Vanesa Paul</h4>
                   <span>Accountant</span>
                 </div>
                 <div class="social">
