--- a/index1.html
+++ b/index1.html
@@ -118,9 +118,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto active" href="index.html#bravo">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About Us</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
           <li class="dropdown"><a href="#"><span>Loan</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="loanmath.html">Our loan types</a></li>
@@ -134,8 +134,8 @@
               <li><a href="loanmath.html">Claim clearence</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#portfolio">Products</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="index.html#portfolio">Products</a></li>
+          <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
